update in feedacks ui

--- a/client/webUI/src/app/pages/admin/feedback/feedback.component.css
+++ b/client/webUI/src/app/pages/admin/feedback/feedback.component.css
@@ -34,3 +34,15 @@
 .row{
     row-gap: 25px;
 }
+
+.read-more-less {
+     /* Angular Material primary color */
+    cursor: pointer;
+    font-weight: 500;
+    margin-left: 5px;
+  }
+  
+  .read-more-less:hover {
+    text-decoration: underline;
+  }
+  
