--- a/client/webUI/src/app/pages/admin/feedback/feedback.component.html
+++ b/client/webUI/src/app/pages/admin/feedback/feedback.component.html
@@ -1,10 +1,11 @@
 <section>
     <div>
         <h5 class="fw-bold mb-4">Feedbacks</h5>
-      </div>
+    </div>
     <div class="row">
         <div class="col-3" *ngFor="let card of cards">
-            <mat-card class="bg-white shadow-sm product-reward-card p-3 h-100 justify-content-between" appearance="outlined">
+            <mat-card class="bg-white shadow-sm product-reward-card p-3 h-100 justify-content-between"
+                appearance="outlined">
                 <mat-card-content>
                     <!-- Star Ratings -->
                     <div>
@@ -13,7 +14,11 @@
                         </ng-container>
                     </div>
                     <!-- Description -->
-                    <p class="description fs-12">{{ card.description }}</p>                   
+                    <p class="description fs-12">{{ card.description |truncate:40:card.expanded }}</p>
+                    <span *ngIf="card.description.split('').length > 50"
+                    class="read-more-less text-primary" (click)="toggleReadMore(card)">
+                        {{ card.expanded ? 'Read Less' : 'Read More' }}
+                    </span>
                 </mat-card-content>
                 <mat-card-actions class="border-top border-light">
                     <!-- User Image and Name -->
@@ -24,7 +29,7 @@
                         </div>
                         <div class="emp-code fs-14 ps-5">{{ card.empCode }}</div>
                     </div>
-                    </mat-card-actions>
+                </mat-card-actions>
             </mat-card>
         </div>
     </div>
