--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
@@ -119,7 +119,15 @@
       No result found.
     </div>
     <!-- paginator -->
-     
+    <mat-paginator class="bg-white" 
+    [length]="totalUsers"
+  [pageSize]="pageSize"
+  [pageIndex]="currentPage - 1"
+  [pageSizeOptions]="[5, 10, 20]"
+  (page)="onPageChange($event)"
+    showFirstLastButtons
+    aria-label="Select page of periodic elements">
+  </mat-paginator>
      <!-- /paginator -->
   </div>
   <!-- /table reference with search and pagination -->
