--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -6,12 +6,14 @@
   <mat-card class="bg-white border-light product-reward-card p-3" appearance="outlined">
     <div class="d-flex align-items-baseline">
       <!-- searchbar -->
-      <mat-form-field appearance="outline">
-        <input matInput (keyup)="applyFilter($event)" type="text" name="search" placeholder="Search..." />
-        <button matSuffix mat-icon-button aria-label="Search">
-          <mat-icon>search</mat-icon>
-        </button>
-      </mat-form-field>
+      <form [formGroup]="searchForm" action="">
+        <mat-form-field appearance="outline">
+          <input matInput  type="text" formControlName="searchTerm" class="form-control" name="search" placeholder="Search..." />
+          <button matSuffix mat-icon-button aria-label="Search">
+            <mat-icon>search</mat-icon>
+          </button>
+        </mat-form-field>
+       </form>    
       <!-- /searchbar -->
       <!-- note -->
       <div class="ms-5">
@@ -101,9 +103,15 @@
       <div class="d-flex justify-content-center mt-2 fw-bold bg-light" *ngIf="dataSource.filteredData.length === 0">
         No result found.
       </div>
-      <mat-paginator class="bg-white" [pageSizeOptions]="[5,10,15]" showFirstLastButtons
+      <!-- paginator -->
+      <mat-paginator class="bg-white" [length]="totalUsers"
+      [pageSize]="pageSize"
+      [pageIndex]="currentPage - 1"
+      [pageSizeOptions]="[5, 10, 20]"
+      (page)="onPageChange($event)" showFirstLastButtons
         aria-label="Select page of periodic elements">
       </mat-paginator>
+      <!-- /paginator -->
     </div>
     <!-- /table reference with search and pagination -->
   </mat-card>
