--- a/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
@@ -16,7 +16,6 @@
                 this.addGiftItemForm.get("couponCode")?.value || "Coupon Code"
                 }}
               </span>
-
               <div class="d-flex justify-content-center my-5">
                 <img mat-card-image height="200" width="200" alt="Product Image" src="assets/images/products/{{
                     selectedFiles?.name || 'create-magic.png'
@@ -64,7 +63,9 @@
           <h4 class="fw-bold mb-1">Product Image</h4>
           <mat-form-field appearance="outline" class="d-block input-lg input">
             <div class="d-flex"><input readonly matInput formControlName="productImage"
-                [value]="selectedFiles?.name || ''" />
+                [value]="selectedFiles?.name || ''"
+
+                 />
               @if (selectedFiles?.name) {
               <mat-icon (click)="removeImage()" class="delete-btn">delete</mat-icon>}
             </div>
