--- a/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
@@ -17,9 +17,7 @@
                 }}
               </span>
               <div class="d-flex justify-content-center my-5">
-                <img mat-card-image height="200" width="200" alt="Product Image" src="assets/images/products/{{
-                    selectedFiles?.name || 'create-magic.png'
-                  }}  " />
+                <img mat-card-image height="200" width="200" alt="Product Image" [src]="currentImage ||  'assets/images/products/create-magic.png'" />
               </div>
 
               <div>
@@ -56,7 +54,7 @@
         <form [formGroup]="addGiftItemForm" (ngSubmit)="onSubmit()">
           <h4 class="fw-bold mb-1">Coupon Code</h4>
           <mat-form-field appearance="outline" class="d-block input-lg input">
-            <input matInput formControlName="couponCode" />
+            <input matInput formControlName="couponCode" (blur)="validateCouponCode()"/>
             <mat-icon matSuffix>vpn_key</mat-icon>
             <mat-error>This is Required</mat-error>
           </mat-form-field>
