--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.css
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.css
@@ -1,3 +1,23 @@
 .mat-mdc-form-field{
     min-width: 300px !important;
 }
+
+/* copy */
+.copy-text{
+    font-size: 20px;    
+    right: 10px;  
+    border-radius: 5px;  
+    padding: 3px 7px;
+    font-weight: 500;
+  }
+
+  mat-icon.copy-icon:hover{
+    cursor: pointer;
+  }
+
+  mat-icon.copy-icon{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+  }
+  /* /copy */
