--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
@@ -4,12 +4,14 @@
 <mat-card class="bg-white border-light product-reward-card p-3" appearance="outlined">
   <div class="d-flex justify-content-between">
     <!-- searchbar -->
-    <mat-form-field appearance="outline">
-      <input matInput (keyup)="applyFilter($event)" type="text" name="search" placeholder="Search..."/>
-      <button matSuffix mat-icon-button aria-label="Search">
-        <mat-icon>search</mat-icon>
-      </button>
-    </mat-form-field>
+    <form [formGroup]="searchForm" action="">
+      <mat-form-field appearance="outline">
+        <input matInput  type="text" formControlName="searchTerm" class="form-control" name="search" placeholder="Search..." />
+        <button matSuffix mat-icon-button aria-label="Search">
+          <mat-icon>search</mat-icon>
+        </button>
+      </mat-form-field>
+     </form>    
     <!-- /searchbar -->
     <!-- add product button -->
     <a mat-flat-button [routerLink]="['/admin/add-gift-item']"
@@ -25,13 +27,18 @@
       <!-- Position Column -->
       <ng-container matColumnDef="position">
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">No.</th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
       </ng-container>
       <!-- Name Column -->
       <ng-container matColumnDef="couponCode">
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Coupon Code</th>
-        <td mat-cell *matCellDef="let element">
+        <td mat-cell *matCellDef="let element" class="position-relative">
           {{ element.couponCode }}
+          <span class="ms-2"><mat-icon matSuffix cdkCopyToClipboard={{element.couponCode}}
+            (click)="copied(element.couponCode)" class="copy-icon">content_copy</mat-icon></span>
+        <div *ngIf="copiedMap.get(element.couponCode)" class="copy-text fs-12 position-absolute bg-dark text-white">
+          copied
+        </div>
         </td>
       </ng-container>
       <!-- Weight Column -->
@@ -83,9 +90,16 @@
     <div class="d-flex justify-content-center mt-2 fw-bold bg-light" *ngIf="dataSource.filteredData.length === 0">
       No result found.
     </div>
-    <mat-paginator class="bg-white" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
-      aria-label="Select page of periodic elements">
-    </mat-paginator>
+    <mat-paginator class="bg-white" 
+    [length]="totalUsers"
+  [pageSize]="pageSize"
+  [pageIndex]="currentPage - 1"
+  [pageSizeOptions]="[5, 10, 20]"
+  (page)="onPageChange($event)"
+    showFirstLastButtons
+    aria-label="Select page of periodic elements">
+  </mat-paginator>
+     <!-- /paginator -->
   </div>
   <!-- /table reference with search and pagination -->
 </mat-card>
