--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
@@ -46,7 +46,7 @@
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Product Title</th>
         <td mat-cell *matCellDef="let element">{{ element.productTitle }}</td>
       </ng-container>
-      <!-- Symbol Column -->
+      <!-- Symbol Column --> 
       <ng-container matColumnDef="productDescription">
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Product Description</th>
         <td mat-cell *matCellDef="let element">
@@ -56,8 +56,8 @@
       <ng-container matColumnDef="productImage">
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Product Image</th>
         <td mat-cell *matCellDef="let element">
-          <div class="p-3">
-            <img style="height: 50px" src="{{ element.productImage }}" alt="image" />
+          <div class="p-3">{{ element.productImage }}
+            <img style="height: 50px" src="http://localhost:3000/api/images/{{ element.productImg }}" alt="image" />
           </div>
         </td>
       </ng-container>
