--- a/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
@@ -58,6 +58,9 @@
             <mat-icon matSuffix>vpn_key</mat-icon>
             <mat-error>This is Required</mat-error>
           </mat-form-field>
+          <div *ngIf = isCouponCodeAlreadyExists class="text-danger">
+            this  coupon code aready exists
+        </div>
           <h4 class="fw-bold mb-1">Product Image</h4>
           <mat-form-field appearance="outline" class="d-block input-lg input">
             <div class="d-flex"><input readonly matInput formControlName="productImage"
