--- a/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
@@ -97,7 +97,7 @@
             </mat-error>
           </mat-form-field>
           <div class="mt-2">
-            <button mat-flat-button class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2">
+            <button mat-flat-button class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2" [disabled]="isCouponCodeAlreadyExists">
               <mat-icon>celebration</mat-icon>Create Reward
             </button>
           </div>
