update in select gift voucher

--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -101,7 +101,7 @@
                         <div>
                             <button mat-flat-button class="button-mh-60 py-4 shadow-sm w-100 bg-dark mt-2 claim-gift-btn"
                                 (click)="claimGiftBtn(i)" [disabled]="activeIndex === i">
-                                <mat-icon>celebration</mat-icon>{{ item.text }}
+                                <mat-icon>celebration</mat-icon>Claim Reward
                             </button>
                         </div>
                     </mat-card-content>
