integrated gift pick api

--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -83,7 +83,7 @@
                                 <mat-icon>close</mat-icon>No
                             </button>
                             <button mat-flat-button class="button-mh-45 shadow-sm py-3 bg-success mt-2 ms-2"
-                                routerLink="/reward-claimed" (click)="selected()">
+                                 (click)="selected()">
                                 <mat-icon>check</mat-icon>Yes
                             </button>
                         </div>
