--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
@@ -27,7 +27,7 @@
       <!-- Position Column -->
       <ng-container matColumnDef="position">
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">No.</th>
-        <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
+        <td mat-cell *matCellDef="let element; let i = index">{{ index(i) }}</td>
       </ng-container>
       <!-- Name Column -->
       <ng-container matColumnDef="couponCode">
