--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
@@ -1,6 +1,10 @@
 <div>
   <h5 class="fw-bold mb-4">Gift Inventory</h5>
 </div>
+<div *ngIf="isLoading" class="spinner-container d-flex justify-content-center align-items-center">
+  <mat-spinner></mat-spinner>
+</div>
+<div *ngIf="!isLoading">
 <mat-card class="bg-white border-light product-reward-card p-3" appearance="outlined">
   <div class="d-flex justify-content-between">
     <!-- searchbar -->
@@ -101,6 +105,7 @@
   </div>
   <!-- /table reference with search and pagination -->
 </mat-card>
+</div>
 <!-- dialog -->
 <ng-template #content>
   <div mat-dialog-title class="banner-font fw-bold">Delete Product!</div>
