--- a/client/webUI/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -7,7 +7,7 @@
         <div class="main-content bg-light flex-grow-1">
             <!-- Header -->
             <app-header (menuClicked)="toggleSidebar()"></app-header>
-            <div class="p-3">
+            <div class="p-3 h-75">
                 <router-outlet></router-outlet>
             </div>
         </div>
