--- a/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
+++ b/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
@@ -1,7 +1,7 @@
 <div>
   <h5 class="fw-bold mb-4">Employee Picks</h5>
 </div>
-<div *ngIf="isLoading" class="spinner-container d-flex justify-content-center align-items-center">
+<div *ngIf="isLoading" class="spinner-container d-flex justify-content-center align-items-center h-100 w-100">
   <mat-spinner></mat-spinner>
 </div>
 <div *ngIf="!isLoading">
