updated loader in dahboard

--- a/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
+++ b/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
@@ -2,7 +2,7 @@
   <h5 class="fw-bold mb-4">Employee Picks</h5>
 </div>
 <div *ngIf="isLoading" class="spinner-container d-flex justify-content-center align-items-center h-100 w-100">
-  <mat-spinner></mat-spinner>
+  <mat-spinner [diameter]="80"></mat-spinner>
 </div>
 <div *ngIf="!isLoading">
   <mat-card class="bg-white border-light product-reward-card p-3" appearance="outlined">
