--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
@@ -2,12 +2,10 @@
   <h5 class="fw-bold mb-4">Generate EmpCode</h5>
 </div>
 <div *ngIf="isLoading" class="spinner-container d-flex justify-content-center align-items-center h-100 w-100">
-  <mat-spinner></mat-spinner>
+  <mat-spinner [diameter]="80"></mat-spinner>
 </div>
 <div *ngIf="!isLoading">
   <mat-card class="bg-white border-light product-reward-card p-3" appearance="outlined">
-
-
     <div class="d-flex justify-content-between align-items-baseline ">
       <!-- searchbar -->
       <form [formGroup]="searchForm" action="">
