--- a/client/webUI/src/app/shared/employee-header/employee-header.component.html
+++ b/client/webUI/src/app/shared/employee-header/employee-header.component.html
@@ -6,9 +6,15 @@
     </div>
     <div>
       @if(isLoginPage()){
-      <a mat-flat-button href="https://www.google.com/" class="bg-dark py-3 shadow-sm button-mh-45"
+      <a mat-flat-button  class="bg-dark py-3 shadow-sm button-mh-45"
         [routerLink]="['/admin-login-access']"><mat-icon>celebration</mat-icon><span>Manage Rewards</span></a>      
-      }@else if(isSelectGiftPage()){
+      }
+      @if(isSelectedGiftDetailsPage()){
+        <a mat-flat-button [routerLink]="['/home']" class="px-5 py-4 button-mh-45 bg-dark shadow-sm" (click)="logOut()">
+          <mat-icon>keyboard_backspace</mat-icon> <span>Back to Home</span>
+        </a>    
+      }
+      @else if(isSelectGiftPage()){
       <a mat-flat-button [routerLink]="['/employee-code']" class="bg-dark py-3 shadow-sm button-mh-45"
         (click)="logOut()">
         <mat-icon>power_settings_new</mat-icon> <span>Logout</span></a>
