changes in admin name

--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
                             <div class="row">
                                 <div class="col-5">
                                     <div>
-                                        <h4>Welcome Admin!</h4>
+                                        <h4>Welcome {{loggedUser.name}}!</h4>
                                     </div>
                                     <div>Manage employee gift selections with ease! Here, you can track employee
                                         preferences, and analyze ratings to ensure the best gifting experience.
