--- a/client/webUI/src/app/pages/admin/feedback/feedback.component.html
+++ b/client/webUI/src/app/pages/admin/feedback/feedback.component.html
@@ -1,6 +1,6 @@
 <section>
     <div>
-        <h5 class="fw-bold mb-4">Feedbacks</h5>
+        <h5 class="fw-bold mb-4">Suggestions</h5>
     </div>
     <div class="row">
         <div class="col-3" *ngFor="let card of cards">
