--- a/client/webUI/src/app/shared/aside/aside.component.html
+++ b/client/webUI/src/app/shared/aside/aside.component.html
@@ -17,6 +17,6 @@
         <mat-icon class="me-4">widgets</mat-icon>Employee Picks
     </a>
     <a [routerLink]="['/admin/feedback']" routerLinkActive="active" class="d-flex text-white p-3 text-decoration-none">
-        <mat-icon class="me-4">chat</mat-icon>Feedbacks
+        <mat-icon class="me-4">chat</mat-icon>Suggestions
     </a>    
 </nav>
