--- a/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
+++ b/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
@@ -130,7 +130,7 @@
 <!-- dialog -->
 <ng-template #content>
   <div mat-dialog-title class="banner-font fw-bold">Delete Product!</div>
-  <mat-dialog-content>This will delete the product and cannot be undone.</mat-dialog-content>
+  <mat-dialog-content>This will delete the gift picked and cannot be undone.</mat-dialog-content>
   <mat-dialog-actions>
     <button mat-button class="bg-dark text-white shadow-sm button-mh-45 py-3 px-4" mat-dialog-close>
       <mat-icon>cancel</mat-icon>
