--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -51,7 +51,7 @@
                                   </mat-error>                                  
                             </mat-form-field>
                             <div *ngIf = isEmailAlreadyExist class="text-danger">
-                                this  email aready exists
+                                this  email already exists
                             </div>                            
                             <h4 class="fw-bold mb-1">DOB</h4>
                             <mat-form-field appearance="outline" class="d-block input-lg input">
