--- a/client/webUI/src/app/pages/employee/selected-gift-details/selected-gift-details.component.html
+++ b/client/webUI/src/app/pages/employee/selected-gift-details/selected-gift-details.component.html
@@ -24,7 +24,7 @@
           <mat-card-content>
             <span class="badge shadow-sm bg-dark text-white fs-12">{{product.couponCode}}</span>
             <div class="d-flex justify-content-center my-5">
-              <img mat-card-image height="200" width="200" [src]="product.productImageDetails.imageUrl" />
+              <img mat-card-image height="200" width="200" [src]="product.productImageDetails?.imageUrl" alt="product-image" />
             </div>
             <div>
               <div>{{product.productTitle}}</div>
